formSubmission function now displays proper alerts for errors

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
-<!DOCTYPE>
+<!DOCTYPE html>
 <html>
     <head>
-        <title>Launch Checklist</title>
+        <title id="testTitle">Launch Checklist</title>
         <link rel = "stylesheet" type = "text/css" href = "styles.css" />
         <script src = "scriptHelper.js"></script>
         <script src = "script.js"></script>
@@ -13,7 +13,7 @@
             <!-- Fetch some planetary data -->
         </div>  
         <div id="launchForm">
-            <form data-testid="testForm">
+            <form id="testForm">
                 <div class="formField">
                     <label>Pilot Name <input type="text" name="pilotName" id="pilotName"/></label>
                 </div>
